--- a/main.css
+++ b/main.css
@@ -1,15 +1,32 @@
 body{
   margin: 0;
+  font-family: sans-serif;
 }
-.logo{
+.logo {
 padding-top: 5%;
 }
-.form-header{
+.form-header {
   margin-top: 0;
+  color: #fff;
 }
-.homepage{
+.homepage {
   text-align: center;
   background-image: url('https://www.metallica.com/on/demandware.static/-/Sites-Metallica-Library/default/dwb6d5ba9e/images/homepage/home-hero.jpg');
   width: 100%;
   height: 100vh;
+}
+.register-form {
+  border: 1px solid #333;
+  background: rgba(69, 69, 69, 0.66);
+  padding: 5% 5%;
+  width: 33%;
+
+}
+.register-form input[type='submit'] {
+  background: #ff6700;
+  padding: 1% 2%;
+  color: #fff;
+  border: 1px solid orange;
+  text-transform: uppercase;
+  font-weight: 600;
 }
