--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ padding-top: 5%;
 .form-header {
   margin-top: 0;
   color: #fff;
+  margin-bottom: 3.5%;
 }
 .homepage {
   text-align: center;
@@ -18,9 +19,15 @@ padding-top: 5%;
 .register-form {
   border: 1px solid #333;
   background: rgba(69, 69, 69, 0.66);
-  padding: 5% 5%;
-  width: 33%;
+  padding: 5% 5% 5% 5%
+  width: 60%;
+  margin: 0 auto;
+  width: 60%;
 
+}
+.register-form input[type='text']{
+  width: 50%;
+  padding: 1% 3% 1% 0.5%;
 }
 .register-form input[type='submit'] {
   background: #ff6700;
@@ -29,4 +36,7 @@ padding-top: 5%;
   border: 1px solid orange;
   text-transform: uppercase;
   font-weight: 600;
+}
+.register-form input[type='submit']:hover{
+  cursor: pointer;
 }
