--- a/main.css
+++ b/main.css
@@ -3,12 +3,15 @@ body{
   font-family: sans-serif;
 }
 .logo {
-padding-top: 5%;
+padding-top: 3%;
+margin-bottom: 3%;
 }
 .form-header {
   margin-top: 0;
   color: #fff;
   margin-bottom: 3.5%;
+  text-transform: uppercase;
+  letter-spacing: 1.11px;
 }
 .homepage {
   text-align: center;
@@ -19,7 +22,7 @@ padding-top: 5%;
 .register-form {
   border: 1px solid #333;
   background: rgba(69, 69, 69, 0.66);
-  padding: 5% 5% 5% 5%
+  padding: 3% 4% 3.5% 4%;
   width: 60%;
   margin: 0 auto;
   width: 60%;
